--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
         }
     ],
     "require": {
-        "php" : "~5.5|~7.0"
+        "php": "~5.5|~7.0",
+        "illuminate/support": "~5.2"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
+        "phpunit/phpunit": "4.*",
         "scrutinizer/ocular": "~1.1",
         "squizlabs/php_codesniffer": "~2.3"
     },
