--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ],
     "require": {
         "php": "~5.5|~7.0",
+        "illuminate/database": "~5.2",
+        "illuminate/http": "~5.2",
         "illuminate/support": "~5.2"
     },
     "require-dev": {
