--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": "~5.5|~7.0",
         "illuminate/database": "~5.2",
         "illuminate/http": "~5.2",
-        "illuminate/support": "~5.2"
+        "illuminate/support": "~5.2",
+        "browner12/validation": "~1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
